Fix DM_NUMBER_CTOR reported by Sonar